# 2025_20475061

./: .gitignore  README.md  adder_8h.html  adder_8h.js  adder_8h_source.html  git-cheat-sheet.txt  globals.html  globals_defs.html  globals_func.html  hianddate.cmd  index.html  navtreedata.js  navtreeindex0.js
.github/workflows/: doxygen-deploy.yml
search/: all_0.js  all_1.js  functions_0.js
worksheet3/: adder.h  libadder.exp
worksheet3/adderstatic/lib/: libadder.lib
worksheet4/Calc/: CMakeLists.txt
worksheet4/hello_cmake/: CMakeLists.txt  hello.cpp
worksheet5/: CMakeLists.txt  adder.cpp  adder.h  calc.cpp
